/*package gameLaby.laby;

public class Fantomes extends Monstre {

    public Fantomes(int dx, int dy) {
        super(dx, dy);
    }


}*/